[package]
name = "rs_yara"
version = "0.1.0"
authors = ["Kulukami <kulukami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
lazy_static = "1.3.0"


[build-dependencies]
yara-src = "0.1.2+3.11.0"

[dev-dependencies]
crossbeam = "0.7"